--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="empty_field">Empty Field!</string>
     <string name="loading">Loading…</string>
     <string name="no_data_found">NO DATA FOUND!</string>
+    <string name="exit_title">Exit the app?</string>
+    <string name="exit_confirmation">Would you like to exit the application?</string>
 </resources>
