--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="loading">Loading…</string>
     <string name="refreshing">Refreshing…</string>
     <string name="no_data_found">NO DATA FOUND!</string>
+    <string name="no_profile_data_found">NO PROFILE DATA FOUND!</string>
+    <string name="no_do_found">NO DO FOUND!</string>
+    <string name="no_agent_found">NO AGENT FOUND!</string>
     <string name="exit_title">Exit the app?</string>
     <string name="exit_confirmation">Would you like to exit the application?</string>
     <string name="logout_confirmation">Would you like to logout from the application?</string>
